# GameOfLife

./: CMakeLists.txt  main.cpp
